--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,24 +1,29 @@
-name = "BipolarSphericalHarmonics"
-uuid = "e22a7426-82a6-487a-9ac6-2ced2976a2d6"
-authors = ["jishnub <jishnub@users.noreply.github.com> and contributors"]
-version = "0.1.0"
-
 [deps]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+LegendrePolynomials = "3db4a2ba-fc88-11e8-3e01-49c72059a882"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 SHTOOLS = "c916fbc8-b869-4f3a-86b1-58538899335e"
 SphericalHarmonicArrays = "9dd28c12-4719-4e7d-b634-e7b733a6d046"
 SphericalHarmonicModes = "0e9554e2-b38b-11e9-16d7-9d9abfec665a"
 SphericalHarmonics = "c489a379-e885-57ff-9236-bd896d33c250"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 VectorSphericalHarmonics = "4b2bd704-7189-418b-a6ce-5ef15384b069"
+WignerD = "87c4ff3e-34df-11e9-37a7-516cea4e0402"
+WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 
 [compat]
+Aqua = "0.5"
+LegendrePolynomials = "0.3"
 OffsetArrays = "1.6.2"
+Rotations = "1"
 SHTOOLS = "1.2"
-SphericalHarmonicArrays = "0.4.9"
-SphericalHarmonicModes = "0.4.13"
+SphericalHarmonicArrays = "0.4.6"
+SphericalHarmonicModes = "0.4"
 SphericalHarmonics = "0.1.14"
-StaticArrays = "1.1.3"
-VectorSphericalHarmonics = "0.1.5"
-julia = "1.6"
+StaticArrays = "1"
+VectorSphericalHarmonics = "0.1.2"
+WignerD = "0.1"
+WignerSymbols = "1"
